--- a/GMedia/Views/Posts/Create.cshtml
+++ b/GMedia/Views/Posts/Create.cshtml
@@ -1,16 +1,17 @@
-﻿@using GMedia
+@using GMedia
 @model GMedia.Models.Post
 
 @{
-    ViewData["Title"] = "Create";
+	ViewData["Title"] = "Create";
 }
 
 @{
-    List<SelectListItem> visibilityValues = Enum.GetValues(typeof(Enums.VisibilityOptions)).Cast<Enums.VisibilityOptions>()
-        .Select(v => new SelectListItem{
-            Text = v.ToString(),
-            Value = ((int)v).ToString()
-        }).ToList();
+	List<SelectListItem> visibilityValues = Enum.GetValues(typeof(Enums.VisibilityOptions)).Cast<Enums.VisibilityOptions>()
+		.Select(v => new SelectListItem
+		{
+			Text = v.ToString(),
+			Value = ((int)v).ToString()
+		}).ToList();
 }
 
 <h1>Create</h1>
@@ -18,32 +19,32 @@
 <h4>Post</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Text" class="control-label"></label>
-                <input asp-for="Text" class="form-control" />
-                <span asp-validation-for="Text" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Visibility" class="control-label"></label>
-                <select asp-for="Visibility" class="form-control" asp-items="visibilityValues"></select>
-                <span asp-validation-for="Visibility" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form asp-action="Create">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="Text" class="control-label"></label>
+				<input asp-for="Text" class="form-control" />
+				<span asp-validation-for="Text" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Visibility" class="control-label"></label>
+				<select asp-for="Visibility" class="form-control" asp-items="visibilityValues"></select>
+				<span asp-validation-for="Visibility" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Create" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
 }
