Seperate project to MVC model
- Create 3 different projects: UI, Services, Data
- Move all code to appropriate places
- Refactor all references

--- a/GMedia/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/GMedia/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,3 +1,5 @@
+@using GMedia.Data.Models
+@using GMedia.UI.Areas.Identity.Pages.Account.Manage
 @inject SignInManager<User> SignInManager
 @{
 	bool hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
