--- a/GMedia/Views/Users/Details.cshtml
+++ b/GMedia/Views/Users/Details.cshtml
@@ -1,4 +1,5 @@
-@model GMedia.Controllers.UsersController.UserDetailsViewModel
+@using GMedia.Data
+@model GMedia.UI.Controllers.UsersController.UserDetailsViewModel
 
 <div class="container">
 	<h2 class="text-center">@(Model.ViewedUser.UserName) - User Details</h2>
