--- a/GMedia/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/GMedia/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using GMedia.Areas.Identity
-@using GMedia.Areas.Identity.Pages
+@using GMedia.UI.Areas.Identity
+@using GMedia.UI.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using GMedia.Models
+@using GMedia.Data.Models
