--- a/GMedia/Views/Shared/_LoginPartial.cshtml
+++ b/GMedia/Views/Shared/_LoginPartial.cshtml
@@ -1,3 +1,4 @@
+@using GMedia.Data.Models
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
