Changes to posts
- Add more posts
- Fix public visibility
- Fix pagination

--- a/GMedia/Views/Home/Index.cshtml
+++ b/GMedia/Views/Home/Index.cshtml
@@ -46,9 +46,12 @@
 			<li class="page-item disabled">
 				<span class="page-link">Page @currentPage</span>
 			</li>
-			<li class="page-item">
-				<a class="page-link" asp-action="Index" asp-route-page="@(currentPage + 1)">Next</a>
-			</li>
+            @if (Model.Count == 25)
+            {
+			    <li class="page-item">
+				    <a class="page-link" asp-action="Index" asp-route-page="@(currentPage + 1)">Next</a>
+			    </li>
+            }
 		</ul>
 	</nav>
 </div>
